--- a/dashboard1.html
+++ b/dashboard1.html
@@ -44,8 +44,7 @@
         <header>
           <h1>Stro</h1>
           <p class="intro-text">
-            Stro is een verrassend slim isolatiemateriaal dat perfect past bij een duurzame levensstijl. Het is een restproduct uit de landbouw en daarmee niet alleen milieuvriendelijk, maar ook goedkoop en ruim beschikbaar. Dankzij de uitstekende isolerende eigenschappen houdt stro je huis warm in de winter en koel in de zomer. Bovendien is het volledig biologisch afbreekbaar én draagt het bij aan een lagere CO₂-uitstoot. Dus ben je op zoek naar een groene, gezellige én slimme manier om te isoleren? Denk dan eens aan stro!
-          </p>
+            Stro is een verrassend slim isolatiemateriaal dat perfect past bij een duurzame levensstijl. Het is een restproduct uit de landbouw en daarmee niet alleen milieuvriendelijk, maar ook goedkoop en ruim beschikbaar. Dankzij de uitstekende isolerende eigenschappen houdt stro je huis warm in de winter en koel in de zomer.         </p>
         </header>
       </div>
       <div class="section section2">
@@ -100,8 +99,7 @@
         <header>
           <h1>Isovlas</h1>
           <p class="intro-text">
-            Isovlas is een natuurlijk isolatiemateriaal gemaakt van vlasvezels, een restproduct uit de textielindustrie. Het is ademend, vochtregulerend en zorgt voor een gezond binnenklimaat zonder schadelijke stoffen. Ideaal voor de duurzame bouwer die comfort én milieubewustzijn belangrijk vindt. Isovlas is volledig recyclebaar en heeft een lage ecologische voetafdruk. Kortom: met isovlas kies je voor warm wonen én een koel geweten!
-          </p>
+            Isovlas is een natuurlijk isolatiemateriaal gemaakt van vlasvezels, een restproduct uit de textielindustrie. Het is ademend, vochtregulerend en zorgt voor een gezond binnenklimaat zonder schadelijke stoffen. Ideaal voor de duurzame bouwer die comfort én milieubewustzijn belangrijk vindt. Isovlas is volledig recyclebaar en heeft een lage ecologische voetafdruk.          </p>
         </header>
       </div>
       <div class="section section2">
@@ -156,8 +154,7 @@
         <header>
           <h1>Cellulose</h1>
           <p class="intro-text">
-            Cellulose is een ecologisch isolatiemateriaal dat wordt gemaakt van gerecycled krantenpapier — dus letterlijk oud nieuws in een nieuw jasje! Het isoleert uitstekend tegen kou én geluid, en past perfect bij wie circulair en duurzaam wil bouwen. Dankzij een toevoeging van natuurlijke zouten is cellulose brandwerend en bestand tegen schimmels en ongedierte. Het materiaal wordt ingeblazen, wat zorgt voor een naadloze isolatielaag zonder kieren. Met cellulose kies je voor comfort, hergebruik én een kleiner klimaatimpact.
-          </p>
+            Cellulose is een ecologisch isolatiemateriaal dat wordt gemaakt van gerecycled krantenpapier — dus letterlijk oud nieuws in een nieuw jasje! Het isoleert uitstekend tegen kou én geluid, en past perfect bij wie circulair en duurzaam wil bouwen. Dankzij een toevoeging van natuurlijke zouten is cellulose brandwerend en bestand tegen schimmels en ongedierte.        </p>
         </header>
       </div>
       <div class="section section2">
@@ -212,8 +209,8 @@
         <header>
           <h1>Hemkor</h1>
           <p class="intro-text">
-            HemKor is een innovatief isolatiemateriaal dat natuurlijke hennepvezels en gerecycled jute combineert tot een duurzame en efficiënte oplossing. Dankzij de ademende structuur en uitstekende isolatiewaarde draagt HemKor bij aan een gezond en comfortabel binnenklimaat. Het materiaal is schimmelwerend, veilig te verwerken en volledig biobased, met een minimale impact op het milieu. HemKor is geschikt voor gebruik in daken, wanden en vloeren en past perfect binnen circulair en ecologisch bouwen. Kies voor HemKor en investeer in een toekomstbestendige woning én planeet.
-            </p>
+            HemKor is een innovatief isolatiemateriaal dat natuurlijke hennepvezels en gerecycled jute combineert tot een duurzame en efficiënte oplossing. Dankzij de ademende structuur en uitstekende isolatiewaarde draagt HemKor bij aan een gezond en comfortabel binnenklimaat. Het materiaal is schimmelwerend, veilig te verwerken.
+          </p>
         </header>
       </div>
       <div class="section section2">
