Descriptie veranderd. Ruimte gemaakt voor de api.

--- a/dashboard1.html
+++ b/dashboard1.html
@@ -44,7 +44,7 @@
         <header>
           <h1>Stro</h1>
           <p class="intro-text">
-            Stro is een verrassend slim isolatiemateriaal dat perfect past bij een duurzame levensstijl. Het is een restproduct uit de landbouw en daarmee niet alleen milieuvriendelijk, maar ook goedkoop en ruim beschikbaar. Dankzij de uitstekende isolerende eigenschappen houdt stro je huis warm in de winter en koel in de zomer.         </p>
+            100% Biobased. Stro is een verrassend slim isolatiemateriaal dat perfect past bij een duurzame levensstijl. Het is een restproduct uit de landbouw en daarmee niet alleen milieuvriendelijk, maar ook goedkoop en ruim beschikbaar. Dankzij de uitstekende isolerende eigenschappen houdt stro je huis warm in de winter en koel in de zomer.         </p>
         </header>
       </div>
       <div class="section section2">
@@ -115,7 +115,7 @@
         <header>
           <h1>Isovlas</h1>
           <p class="intro-text">
-            Isovlas is een natuurlijk isolatiemateriaal gemaakt van vlasvezels, een restproduct uit de textielindustrie. Het is ademend, vochtregulerend en zorgt voor een gezond binnenklimaat zonder schadelijke stoffen. Ideaal voor de duurzame bouwer die comfort én milieubewustzijn belangrijk vindt. Isovlas is volledig recyclebaar en heeft een lage ecologische voetafdruk.          </p>
+            75% Biobased. Isovlas is een natuurlijk isolatiemateriaal gemaakt van vlasvezels, een restproduct uit de textielindustrie. Het is ademend, vochtregulerend en zorgt voor een gezond binnenklimaat zonder schadelijke stoffen. Ideaal voor de duurzame bouwer die comfort én milieubewustzijn belangrijk vindt. Isovlas is volledig recyclebaar en heeft een lage ecologische voetafdruk.          </p>
         </header>
       </div>
       <div class="section section2">
@@ -170,7 +170,7 @@
         <header>
           <h1>Cellulose</h1>
           <p class="intro-text">
-            Cellulose is een ecologisch isolatiemateriaal dat wordt gemaakt van gerecycled krantenpapier — dus letterlijk oud nieuws in een nieuw jasje! Het isoleert uitstekend tegen kou én geluid, en past perfect bij wie circulair en duurzaam wil bouwen. Dankzij een toevoeging van natuurlijke zouten is cellulose brandwerend en bestand tegen schimmels en ongedierte.        </p>
+            100% Biobased. Cellulose is een ecologisch isolatiemateriaal dat wordt gemaakt van gerecycled krantenpapier — dus letterlijk oud nieuws in een nieuw jasje! Het isoleert uitstekend tegen kou én geluid, en past perfect bij wie circulair en duurzaam wil bouwen. Dankzij een toevoeging van natuurlijke zouten is cellulose brandwerend en bestand tegen schimmels en ongedierte.        </p>
         </header>
       </div>
       <div class="section section2">
@@ -225,7 +225,7 @@
         <header>
           <h1>Hemkor</h1>
           <p class="intro-text">
-            HemKor is een innovatief isolatiemateriaal dat natuurlijke hennepvezels en gerecycled jute combineert tot een duurzame en efficiënte oplossing. Dankzij de ademende structuur en uitstekende isolatiewaarde draagt HemKor bij aan een gezond en comfortabel binnenklimaat. Het materiaal is schimmelwerend, veilig te verwerken.
+            80% Biobased. HemKor is een innovatief isolatiemateriaal dat natuurlijke hennepvezels en gerecycled jute combineert tot een duurzame en efficiënte oplossing. Dankzij de ademende structuur en uitstekende isolatiewaarde draagt HemKor bij aan een gezond en comfortabel binnenklimaat. Het materiaal is schimmelwerend, veilig te verwerken.
           </p>
         </header>
       </div>
@@ -277,6 +277,32 @@
   </div>
 
   <script>
+
+    fetch("sensor_api")
+            .then(response => response.json())
+            .then(data => {
+
+
+              console.log(data)
+
+
+
+
+              // hier binnen moet je werken
+
+
+
+            })
+
+
+
+
+
+
+
+
+
+
     function showPage(page) {
       document.querySelectorAll('.dashboard-page').forEach(function(el) {
         el.classList.remove('active');
