Volledige aanvullende opdracht. Dynamisch Stoken.

--- a/dashboard1.html
+++ b/dashboard1.html
@@ -9,6 +9,7 @@
   <script src="chart.umd.js"></script>
   <script src="sensor_dashboard.js"></script>
   <script src="weer_api.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@2.2.1/dist/chartjs-plugin-annotation.min.js"></script>
   <style>
     .dashboard-page { display: none; }
     .dashboard-page.active { display: block; }
@@ -154,7 +155,7 @@
               <div class="hex"><div class="hex-content">Luchtvocht<br><span id="hum3_cellulose">N/A</span></div></div>
               <div class="hex"><div class="hex-content">Binnensensor<br><span id="temp3_cellulose">N/A</span></div></div>
               <div class="line-right-3"></div>
-            </div>  
+            </div>
           </div>         
         </div>
         <div class="sub-section sub3">
